([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Собор Успения Пресвятой Богородицы. Белозерск.jpg]] → [[File:Спасо-Преображенский собор в Белозерске 2.jpg]]

--- a/Belozersk.mw
+++ b/Belozersk.mw
@@ -40,7 +40,7 @@ Eriližed avtoted ühtenzoittas lidnad [[Čerepovec]]anke i [[Vologd]]anke. Läh
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Белозерск кремль 2.jpg|Belozerskan Kreml'
-Собор Успения Пресвятой Богородицы. Белозерск.jpg|Pühän Jumalanmaman Emäganpäivän päjumalanpert', vn 2017 nägu
+Спасо-Преображенский собор в Белозерске 2.jpg|Pühän Jumalanmaman Emäganpäivän päjumalanpert', vn 2017 nägu
 Белозерск, здание винного завода.jpg|Paštatezsija, ende vintegim (2017)
 Здание торговых рядов, Белозерск. Фото 2.jpg|Torguindrividen sauvuz (2019)
 Дом начальника дистанции Белозерского канала (Культурный центр имени С.В.Викулова).jpg|Kul'turkeskuz [[Sergei Vikulov]]an nimed (2013)
