--- a/Amerikan_Ühtenzoittud_Valdkundad.mw
+++ b/Amerikan_Ühtenzoittud_Valdkundad.mw
@@ -48,13 +48,13 @@ Londuseližed pävarad oma [[kivivoi]], [[londuseline gaz]], [[kivihil']], [[met
 
 == Politine sistem ==
 [[Fail:WhiteHouseSouthFacade.JPG|thumb|right|250px|''White House («[[Vauged Pert']]»)'' om AÜV:oiden prezidentan rezidencii [[Vašington (lidn)|Vašingtonas]].]]
-Ohjandusen form om federativine [[prezidentine tazovaldkund|prezidentine]] tazovaldkund. Valdkundan pämez' om prezident ({{lang-en|President of the United States of America}}, ''POTUS''). Valitas händast Valičijoiden kollegijan änil štatoidme nelläks vodeks (enamba kaht strokud ei sa vspäi 1951), parlamentan ezitajad da tetabad mehed oma valičijoikš.
+Ohjandusen form om federativine [[prezidentine tazovaldkund|prezidentine]] tazovaldkund. Valdkundan pämez' om prezident ({{lang-en|President of the United States of America}}, ''POTUS''), hän-žo om azekhiden vägiden päkäsknik. Valitas prezidentad Valičijoiden kollegijan änil štatoidme nelläks vodeks (enamba kaht strokud ei sa vspäi 1951), parlamentan ezitajad da tetabad mehed oma valičijoikš.
 
-Parlament om kaks'kodine Kongress ({{lang-en|United States Congress}}). Üläkodi om Senat ({{lang-en|The United States Senate}}), 100 ühtnijad om siš, valitas heid kudeks vodeks, koumandesen rotacii oleleb kerdan kahtes vodes. Alakodi om Ezitajiden Kodi ({{lang-en|The United States House of Representatives}}), valitas sen 435 ühtnijad kaikuččes kahtes vodes.
+Parlament om kaks'kodine Kongress ({{lang-en|United States Congress}}). Üläkodi om Senat ({{lang-en|The United States Senate}}), 100 ühtnijad om siš (kaks' ezitajad kaikuččes štataspäi), valitas heid kudeks vodeks, koumandesen rotacii oleleb kerdan kahtes vodes. Alakodi om Ezitajiden Kodi ({{lang-en|The United States House of Representatives}}), valitas sen 435 ühtnijad kaikuččes kahtes vodes, ezitajiden lugumär štataspäi rippub sen ristitištospäi (no hot' üks' om joga štataspäi) i vajehtase kerdan kümnes vodes. Kaks' päpartijad märitas politižen elon, hot' toižiden partijoiden kandidatad voidas anastada änid erasti. Ned päižed partijad oma [[AÜV:oiden Demokratine partii]] i [[AÜV:oiden Tazovaldkundaline partii]].
 
 Nügüdläine prezident om valitud vl 2020 kül'mkun 3. päiväl [[Baiden Džo|Džo Baiden]] (sai 56,9% valičijoiden änid) parlamentan ezitajidenke ühtes, radaškanzi vs 2021 vilukun 20. päiväspäi, hän radoi varaprezidentan [[Obama Barak|Obaman]] administracijan aigan kaks' strokud jäl'geten. Edeline prezident om [[Tramp Donal'd|Donal'd Tramp]]. Kongressan valdoiktused (117nz' kucund) jätktasoiš vn 2021 3. päiväspäi vilukud vn 2023 3. päivhäsai vilukud.
 
-AÜV:oiden Ülembaine Käskuzkund (angl. ''Supreme Court of the United States'') om käskuzkundaližen tobmuden pä. Ühesa sudijad mülüdas sihe, AÜV:oiden prezident paneb kaikuttušt sudijad radsijha Senatan hüvästusen sandan jäl'ghe.
+AÜV:oiden Ülembaine Käskuzkund (angl. ''Supreme Court of the United States'') om käskuzkundaližen tobmuden pä. Ühesa sudijad mülüdas sihe, AÜV:oiden prezident paneb kaikuttušt sudijad radsijha Senatan hüvästusen sandan jäl'ghe. [[Anglosaksaine oiktuzkund|Ühthine oiktuz]] om väges AÜV:oiden kaikiš štatoiš päiči [[Luizian]]as, kus [[romanižgermanine oiktuzkund]] om legaline.
 
 == Administrativiž-territorialine jagand ==
 &nbsp;&nbsp;&nbsp;''Kacu kirjutuz: [[Amerikan Ühtenzoittud Valdkundoiden administrativiž-territorialine jagand]].''
