--- a/Amerikan_Ühtenzoittud_Valdkundad.mw
+++ b/Amerikan_Ühtenzoittud_Valdkundad.mw
@@ -54,7 +54,7 @@ Parlament om kaks'kodine Kongress ({{lang-en|United States Congress}}). Üläkod
 
 Nügüdläine prezident om valitud vl 2020 kül'mkun 3. päiväl [[Baiden Džo|Džo Baiden]] (sai 56,9% valičijoiden änid) parlamentan ezitajidenke ühtes, radaškanzi vs 2021 vilukun 20. päiväspäi, hän radoi varaprezidentan [[Obama Barak|Obaman]] administracijan aigan kaks' strokud jäl'geten. Edeline prezident om [[Tramp Donal'd|Donal'd Tramp]]. Kongressan valdoiktused (117nz' kucund) jätktasoiš vn 2021 3. päiväspäi vilukud vn 2023 3. päivhäsai vilukud.
 
-AÜV:oiden Ülembaine Käskuzkund (angl. ''Supreme Court of the United States'') om käskuzkundaližen tobmuden pä. Ühesa sudijad mülüdas sihe, AÜV:oiden prezident paneb kaikuttušt sudijad radsijha Senatan hüvästusen sandan jäl'ghe. [[Anglosaksaine oiktuzkund|Ühthine oiktuz]] om väges AÜV:oiden kaikiš štatoiš päiči [[Luizian]]as, kus [[romanižgermanine oiktuzkund]] om legaline.
+AÜV:oiden Ülembaine Käskuzkund (angl. ''Supreme Court of the United States'') om käskuzkundaližen tobmuden pä. Ühesa sudijad mülüdas sihe, AÜV:oiden prezident paneb kaikuttušt sudijad radsijha Senatan hüvästusen sandan jäl'ghe. [[Anglosaksaine oiktuzkund|Ühthine oiktuz]] om väges AÜV:oiden kaikiš štatoiš päiči [[Luizian]]as, kus [[romanižgermanine oiktuzkund|romanižgermanine oiktuz]] om legaline.
 
 == Administrativiž-territorialine jagand ==
 &nbsp;&nbsp;&nbsp;''Kacu kirjutuz: [[Amerikan Ühtenzoittud Valdkundoiden administrativiž-territorialine jagand]].''
