--- a/Peilin_Sara.mw
+++ b/Peilin_Sara.mw
@@ -4,6 +4,8 @@
 }}
 '''Sara Luiz Peilin''' ({{lang-en|Sarah Louise Palin}}; sünd. [[11. uhoku]] [[1964]], [[Sendpoint]], [[Aidaho]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]) om [[Amerikan Ühtenzoittud Valdkundad|amerikalaine]] [[politikanmez']]. Hän om ranu [[Aläsk]]-štatan gubernatoran (04.12.2006—26.07.2009).
 
+Naine om [[AÜV:oiden Tazovaldkundaline partii|Tazovaldkundaližen partijan]] ühtnijan. Sara Peilin ühtni vn 2008 AÜV:oiden prezidentan valičendoihe varaprezidentan radnikushe näht paras [[Džon Makkein]]anke, no hö saiba kilad.
+
 == Homaičendad ==
 <references/>
 
@@ -15,4 +17,5 @@
 [[Kategorii:Aläsk]]
 [[Kategorii:Politikanmehed kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
+[[Kategorii:AÜV:oiden Tazovaldkundaližen partijan ühtnijad]]
 [[Kategorii:Sündnuded Aidahoze]]
