--- a/Kačokavallo.mw
+++ b/Kačokavallo.mw
@@ -1,10 +1,16 @@
-[[Fail:Caciocavallo.JPG|thumb|250px|Rippui sagud tippunvuiččen formanke.]]
-'''Kačokavallo''' ([[italijan kel'|ital.]] ''Caciocavallo'' — «sagud rachal», [[sicilijan kel'|sic.]] ''Caciucavaddu'') om [[sagud]]en erik lambhan- vai lehmän[[maid]]ospäi, kudambad eziauguižin tehtihe vaiše [[Sicilii|Sicilijal]], no sid' sen tegend leviganzi kaiked [[Italii|Italijadme]] i [[Balkanan pol'sar'|Balkanan pol'saredme]].
+[[Fail:Caciocavallo.JPG|thumb|250px|Rippui sagud tippunvuiččen formanke]]
+'''Kačokavallo''' ({{lang-it|Caciocavallo}} «sagud hebon rachal», [[sicilijan kel'|sic]]. ''Caciucavaddu'') om [[sagud]]en pol'kova erik lambhan- vai lehmän[[maid]]ospäi. Eziauguižin tehtihe saguden toižendad vaiše [[Sicilii|Sicilijal]], no sid' sen tegend leviganzi kaiked [[Italii|Italijadme]] i [[Balkanan pol'sar'|Balkanan pol'saredme]].
 
-Necen saguden toižendan tehmine alištub [[Evropan Ühtištuz|EÜ:n]] programale augotižlibundan znaman kaičendas (angl. ''PDO — protected designation of origin'').
+Necen saguden toižendan tehmine alištub [[Evropan Ühtištuz|EÜ:n]] programale augotižlibundan znaman kaičendas ({{lang-en|PDO — protected designation of origin}}).
+
+Kačokavallo om kündlen formal kovas södabas kores. Magu om italižen [[provolone]]-saguden kartte, kudes kus tehmižen jäl'ghe kändase [[parmezan]]an pojav. Tehmižes vedatadas saguden palad sihesai, kuni se lopib rebitandan i kändase kuidekahaks, sid' porcioniruidas da formuidas.
+
+== Homaičendad ==
+<references />
+
+{{Commons|Category:Caciocavallo}}
 
 {{stub}}
-
 [[Kategorii:Sagud]]
 [[Kategorii:Italijan keitand]]
 [[Kategorii:Albanijan keitand]]
