--- a/Sargsän_Serž.mw
+++ b/Sargsän_Serž.mw
@@ -2,14 +2,15 @@
 | изображение = Serzh Sargsyan.jpg
 | описание изображения = Serž Sargsän vn 2007 redukus
 }}
-'''Serž Azati Sargsän''' ({{lang-hy|Սերժ Ազատի Սարգսյան}}; sünd. [[30. kezaku]] [[1954]], [[Stepanakert]], [[Azerbaidžan|Azerbaidžanan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om 3. da nügüdläine [[Armenii|Armenijan]] prezident, radab necil sijal vn 2008 sulakun 9. päiväspäi.
+'''Serž Azati Sargsän''' ({{lang-hy|Սերժ Ազատի Սարգսյան}}; sünd. [[30. kezaku]] [[1954]], [[Stepanakert]], [[Azerbaidžan|Azerbaidžanan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Armenii|Armenijan]] politikanmez' da sodamez', valdkundan šingotai. Armenijan koumanz' prezident, radoi necil sijal vn 2008 sulakun 9. päiväspäi vn 2018 sulakun 9. päivhäsai. Oti Armenijan päministran radnikust (4. sulaku 2007 — 9. sulaku 2008, 17.-23. sulaku 2018).
+
+Vll 1971−1979 mez' openui Jerevanan valdkundaližes universitetas, sen filologižes fakul'tetas.
 
 == Homaičendad ==
 <references/>
 
 {{stub}}
 [[Kategorii:Valdkundmehed]]
-[[Kategorii:Armenii]]
 [[Kategorii:Armenijan prezidentad]]
 [[Kategorii:Politikanmehed kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
