--- a/Sargsän_Serž.mw
+++ b/Sargsän_Serž.mw
@@ -2,9 +2,12 @@
 | изображение = Serzh Sargsyan.jpg
 | описание изображения = Serž Sargsän vn 2007 redukus
 }}
-'''Serž Azati Sargsän''' ({{lang-hy|Սերժ Ազատի Սարգսյան}}; sünd. [[30. kezaku]] [[1954]], [[Stepanakert]], [[Azerbaidžan|Azerbaidžanan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Armenii|Armenijan]] politikanmez' da sodamez', valdkundan šingotai. Armenijan koumanz' prezident, radoi necil sijal vn 2008 sulakun 9. päiväspäi vn 2018 sulakun 9. päivhäsai. Oti Armenijan päministran radnikust (4. sulaku 2007 — 9. sulaku 2008, 17.-23. sulaku 2018).
+'''Serž Azati Sargsän''' ({{lang-hy|Սերժ Ազատի Սարգսյան}}; sünd. [[30. kezaku]] [[1954]], [[Stepanakert]], [[Azerbaidžan|Azerbaidžanan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Armenii|Armenijan]] politikanmez' da sodamez', valdkundan šingotai. Armenijan koumanz' prezident, radoi necil sijal kaks' strokud jäl'geten, vn 2008 sulakun 9. päiväspäi vn 2018 sulakun 9. päivhäsai. Oti Armenijan päministran radnikust (4. sulaku 2007 — 9. sulaku 2008, 17.-23. sulaku 2018), jäl'gmäižel statjal läksi erindha protestoiden tagut, no jäi vedajan parlamentan partijan lideran.
 
-Vll 1971−1979 mez' openui Jerevanan valdkundaližes universitetas, sen filologižes fakul'tetas.
+== Biografii ==
+Vll 1971−1979 mez' openui Jerevanan valdkundaližes universitetas, sen filologižes fakul'tetas. Vll 1972−1974 služi nevondkundaližes armijas, vll 1975−1979 radoi Jerevanan tegimel. Pästandan universitetaspäi jäl'ghe Sargsän oti partijan radnikusid Stepanakertas vhesai 1988. 
+
+Politikanmez' om naižiš, kazvatihe kaht tütärt naimiželos. Mahtab pagišta nelläl kelel kodimaižen armenijan kelen ližaks: venän, anglijan, azerbaidžanan i turkan keled.
 
 == Homaičendad ==
 <references/>
