--- a/GOT7.mw
+++ b/GOT7.mw
@@ -2,22 +2,22 @@
  | Nimi = GOT7<br />갓세븐
  | Logo = Got7 logo.png
  | Foto = GOT7 at Korea Sale Festa.jpg
- | Žanrad = [[kei-pop]], [[hip-hop]]
+ | Žanrad = [[keipop]], [[hiphop]]
  | Voded = 2014—
  | Valdkund = Suvikorei
  | Lidn = Seul
- | Kel' = [[korejan kel']], [[anglijan kel']], [[japonan kel']]
+ | Kel' = [[korejan kel']],<br/>[[anglijan kel']],<br/>[[japonan kel']]
  | Leiblad = JYP Entertainment,<br />Sony Music Entertainment
  | Toižed projektad = JJ Project,<br />JYP Nation
  | Mülükund = Mark Tuan,<br />Im Džebom,<br />[[Džekson Van]],<br />Pak Džinö,<br />Čhve Jondže,<br />Konpimuk Buvakul',<br />Kim Jugöm
  | Eksühtnijad =
  | Sait = http://got7.jype.com/
 }}
-'''«GOT7»''' ({{lang-ko|갓세븐}} ''Gassebeun'') om tetab prihoiden [[Suvikorei|suvikorejine]] muzikgrupp, kudamb om edestanu muzikad [[kei-pop]]- da [[hip-hop]]-stiliš.
+'''«GOT7»''' ({{lang-ko|갓세븐}} ''Gassebeun'') om tetab prihoiden [[Suvikorei|suvikorejine]] muzikgrupp, kudamb om edestanu muzikad [[keipop]]- da [[hiphop]]-stiliš.
 
 == Mülükund ==
 * Mark Tuan, vai muite Mark
-* Im Džebom, vai Džeibi — gruppan lider da päsolist
+* Im Džebom, vai Džeibi — gruppan lider da pään'
 * [[Džekson Van]], vai muite Džekson
 * Pak Džinö
 * Čhve Jondže, vai muite Jondže
@@ -26,12 +26,13 @@
 
 == Diskografii ==
 === Korejankel'žed al'bomad ===
-* 2014 — Identify
-* 2016 — Flight Log: Turbulence
-* 2018 — Present: You
+* 2014 — ''Identify''
+* 2016 — ''Flight Log: Turbulence''
+* 2018 — ''Present: You'' (Nügüdläine aig: Sinä)
+* 2020 — ''Breath of Love: Last Piece'' (Armastusen hengaiduz: Jäl'gmäine pala)
 
 === Japonankel'žed al'bomad ===
-* 2016 — Moriagatteyo
+* 2016 — ''Moriagatteyo''
 
 == Homaičendad ==
 <references />
