--- a/Avstralijan_flag.mw
+++ b/Avstralijan_flag.mw
@@ -1,10 +1,14 @@
 [[Fail:Flag of Australia.svg|border|right|250px|]]
 '''Avstralijan flag''' ({{lang-en|Flag of Australia}}) om [[Avstralijan Ühtištuz]]-valdkundan üks' oficialižiš simvolišpäi. Flagan proporcii om ''1:2''.
 
-Nügüdläine flag om vahvištadud vn [[1908]] 19. päiväl tal'vkud. Se sai täut oficiališt statusad ümbrikirjutandanke vn 1954 uhokus.
+Nügüdläine flag om vahvištadud vn [[1908]] 19. päiväl tal'vkud nacionaližen konkursan rezul'tatan mödhe. Flag sai täut oficiališt statusad ümbrikirjutandanke vn 1954 uhokus, vn 1953 «Flagas»-käskusen vahvištusen jäl'ghe ({{lang-en|Flags Act 1953}}). Flagan vajehtusen voimuz om rahvahaližen referenduman satusiden mödhe vaiše.
+
+Rahvahaližen flagan päiv oigendase joga voden 3. sügüz'kud vspäi 1996.
 
 == Ümbrikirjutand ==
-[[Sur' Britanii|Suren Britanijan]] flag otab Avstralijan flagan nelländest hural üläčogal. Ühtištusen vauged tähtaz kuvadase alahan sišpäi, [[Suvirist]]-tähthišton stilizuidud kuva videnke vauktanke tähthaiženke sijadase oiktalpäi, molembad oma sinižel tagamal.
+[[Sur' Britanii|Suren Britanijan]] flag otab Avstralijan flagan nelländest hural üläčogal. Ühtištusen vauged tähtaz kuvadase alahan sišpäi, [[Suvirist]]-tähthišton stilizuidud kuva videnke vauktanke tähthaiženke sijadase oiktalpäi, molembad oma sinižel tagamal. Kaik tähthad oma seičemeagjaižed päiči kaikiš penembas. Suren tähthan seičeme agjad simvoliziruidas kuz' štatad i rippujid territorijoid. Flagan mujud tošttas Suren Britanijan flagan mujuid.
+
+Valdkundan sodamerivägiden flag om vauktanke tagamanke (tähthad oma sinižen mujun), torguindlaivišton flagan tagama om rusked.
 
 == Kacu mugažo ==
 * [[Avstralijan valdkundznam]]
