--- a/Silend.mw
+++ b/Silend.mw
@@ -1,19 +1,23 @@
 [[Fail:Flag of Sealand.svg|thumb|right|160px|Silendan flag]][[Fail:Sealand Coat of Arms.svg|thumb|right|120px|Silendan znam]]
 [[Fail:Europe location SLD.png|thumb|right|Sijaduz]]
-'''Silend''', '''Silendan ruhtinazkund''' om [[mikrovaldkund]] [[Evrop]]as, [[Pohjoižmeri|Pohjoižmeres]].
+'''Silendan ruhtinazkund''' ({{lang-en|Principality of Sealand}}), lühüdas '''Silend''' (vepsäks «merima»), om virtualine valdkund ([[mikrovaldkund]]) [[Evrop]]as [[Sur' Britanii|Suren Britanijan]] suvipäivnouzmaiženno randištonno, [[Pohjoižmeri|Pohjoižmeres]]. Om tedotadud britanižel Peddi Roi Beits-majoral erindas vl 1967.
 
-Sijadase [[Rafs Tauer]]-meriplatformal. Pind om 550 nellikmetrad.
+Sijadase [[Rafs Tauer]]-meriplatformal. Pind om 550 nellikmetrad. Ristitišt — 27 eläjad (2017). Oficialine kel' om [[anglijan kel']].
 
-Silendan valdkundandeviz — ''E mare libertas'' ({{lang-vep|Merespäi joudjuz}}). Ohjandai dinastii — [[Beitsad]].
+Silendan valdkundaline deviz om ''E mare libertas'' ({{lang-vep|Merespäi joudjuz}}). Ohjandai dinastii — [[Beitsad]].
 
 == Galerei ==
 <center><gallery>
-Fail:Sealand-sky.jpg
-Fail:Sealand-sky-2.jpg
-Fail:Sealand.jpg
-Fail:Sealand fortress.jpg
-Fail:Sealand from Felixstowe Ferry.JPG
+Sealand-sky.jpg
+Sealand-sky-2.jpg
+Sealand.jpg
+Sealand fortress.jpg
+Sealand from Felixstowe Ferry.JPG
 </gallery></center>
+
+== Irdkosketused ==
+* [http://sealandgov.org/ Virtualižen valdkundan sait (''sealandgov.org'').] {{ref-en}}
+{{Commons|Category:Sealand}}
 
 {{stub}}
 [[Kategorii:Mikrovaldkundad]]
