--- a/Silend.mw
+++ b/Silend.mw
@@ -16,7 +16,7 @@ Sealand from Felixstowe Ferry.JPG
 </gallery></center>
 
 == Irdkosketused ==
-* [http://sealandgov.org/ Virtualižen valdkundan sait (''sealandgov.org'').] {{ref-en}}
+* [http://sealandgov.org/ Virtualižen valdkundan sait (''sealandgov.org'').] {{ref-en}}{{ref-fr}}{{ref-de}}{{ref-es}}{{ref-pt}}{{ref-ru}}{{ref-zh}}{{ref-ja}}
 {{Commons|Category:Sealand}}
 
 {{stub}}
