--- a/Estinman_konservativine_rahvahaline_partii.mw
+++ b/Estinman_konservativine_rahvahaline_partii.mw
@@ -1,9 +1,11 @@
 [[Fail:EKRE logo.png|thumb|right|250px|EKRE:n znam]]
-'''Estinman konservativine rahvahaline partii''', '''EKRP''' ({{lang-et|Eesti Konservatiivne Rahvaerakond}}, ''EKRE'') om [[Estinma|estilaine]] oiged politine partii [[nacionalizm|nacionastiženke]] ideologijanke. Om tehtud [[2012]]-nden voden [[24. keväz'ku|keväz'kun 24. päiväl]] neniden organizacijoiden ühtištusel: Estinman Rahvahaline ühtištuz (agrarine, keskuz) i Estinman rahvahaline likund (oiged nacionalistine sebr).
+'''Estinman konservativine rahvahaline partii''', '''EKRP''' ({{lang-et|Eesti Konservatiivne Rahvaerakond}}, ''EKRE'') om [[Estinma]]n oiged politine partii [[nacionalizm|nacionastiženke]] ideologijanke. Päfater sijadase [[Tallidn]]as.
 
 Ezmäine pämez' oli [[Mart Helme]], hänen Martin Helme-poig vajehti radinsijas vn 2020 heinkus.
 
-Enamba mi 8 tuhad ühtnijoid. Seičeme partijan ühtnijad om sijaližes parlamentas.
+Partii om sätud [[2012]]-nden voden [[24. keväz'ku|keväz'kun 24. päiväl]] neniden organizacijoiden ühtištusel: Estinman Rahvahaline ühtištuz (agrarine, keskuz) i Estinman rahvahaline likund (oiged nacionalistine sebr).
+
+Partijas om enamba mi 8,7 tuhad ühtnijoid. Ühesatoštkümne partijan ühtnijad om valdkundan parlamentas vspäi 2019, nügüdläižes mülükundas partii om oppozicijas. Üks' ühtnii om [[Evroparlament]]as.
 
 == Homaičendad ==
 <references />
