--- a/Estinman_konservativine_rahvahaline_partii.mw
+++ b/Estinman_konservativine_rahvahaline_partii.mw
@@ -3,9 +3,10 @@
 
 Ezmäine pämez' oli [[Mart Helme]], hänen Martin Helme-poig vajehti radinsijas vn 2020 heinkus.
 
-Partii om sätud [[2012]]-nden voden [[24. keväz'ku|keväz'kun 24. päiväl]] neniden organizacijoiden ühtištusel: Estinman Rahvahaline ühtištuz (agrarine, keskuz) i Estinman rahvahaline likund (oiged nacionalistine sebr).
+== Istorii ==
+Partii om sätud [[2012]]-nden voden [[24. keväz'ku|keväz'kun 24. päiväl]] neniden organizacijoiden ühtištusel: Estinman Rahvahaline ühtištuz (agrarine, keskuz) i Estinman rahvahaline likund (oiged nacionalistine sebr). Ideologii om nacionalkonservatizm, socialine konservatizm, evroskepticizm.
 
-Partijas om enamba mi 8,7 tuhad ühtnijoid. Ühesatoštkümne partijan ühtnijad om valdkundan parlamentas vspäi 2019, nügüdläižes mülükundas partii om oppozicijas. Üks' ühtnii om [[Evroparlament]]as.
+Partijas om enamba mi 8,7 tuhad ühtnijoid. Ühesatoštkümne partijan ühtnijad om valdkundan parlamentas vn 2019 valičendoišpäi, üks' ühtnii om [[Evroparlament]]as. Estinman parlamentan nügüdläižes  mülükundas EKRP mülüi ohjastajha koalicijha vn 2021 vilukuhusai, sid' partii om oppozicijas.
 
 == Homaičendad ==
 <references />
