--- a/Estinman_konservativine_rahvahaline_partii.mw
+++ b/Estinman_konservativine_rahvahaline_partii.mw
@@ -6,10 +6,13 @@ Ezmäine pämez' oli [[Mart Helme]], hänen Martin Helme-poig vajehti radinsijas
 == Istorii ==
 Partii om sätud [[2012]]-nden voden [[24. keväz'ku|keväz'kun 24. päiväl]] neniden organizacijoiden ühtištusel: Estinman Rahvahaline ühtištuz (agrarine, keskuz) i Estinman rahvahaline likund (oiged nacionalistine sebr). Ideologii om nacionalkonservatizm, socialine konservatizm, evroskepticizm.
 
-Partijas om enamba mi 8,7 tuhad ühtnijoid. Ühesatoštkümne partijan ühtnijad om valdkundan parlamentas vn 2019 valičendoišpäi, üks' ühtnii om [[Evroparlament]]as. Estinman parlamentan nügüdläižes  mülükundas EKRP mülüi ohjastajha koalicijha vn 2021 vilukuhusai, sid' partii om oppozicijas.
+Partijas om enamba mi 10 tuhad ühtnijoid (2021). Ühesatoštkümne partijan ühtnijad om valdkundan parlamentas vn 2019 valičendoišpäi, üks' ühtnii om [[Evroparlament]]as. Estinman parlamentan nügüdläižes  mülükundas EKRP mülüi ohjastajha koalicijha vn 2021 vilukuhusai, sid' partii om oppozicijas.
 
 == Homaičendad ==
 <references />
+
+== Irdkosketused ==
+* [http://ekre.ee/ Partijan oficialine sait (''ekre.ee'').] {{ref-et}}
 
 {{stub}}
 [[Kategorii:Estinman politik]]
