--- a/Neftejugansk.mw
+++ b/Neftejugansk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Neftejuganskan lidnanznam
  | Flag text = Neftejuganskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 126,157
- | Voz' = 2017
+ | Eläjiden lugu = 128,159
+ | Voz' = 2021
  | Pind = 154
- | Fail = Впереди Нефтеюганск - panoramio.jpg
- | Pämez' = Sergei Degtärov<br />(reduku 2016—)
+ | Fail = Нефтеюганск. Улица Набережная.jpg
+ | Pämez' = El'vira Bugai<br />(kül'mku 2021—)
  | Telefonkod = +7-3463-xxx-xxx
  | Avtokod = 86. 186
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -30,6 +30,17 @@ Neftejugansk om lidnümbrikon üks'jäine eländpunkt.
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 122 855 ristitud. Kaikiš suremb ristitišt om nügüd'.
 
 Rahvahad (enamba 1% vl 2010): [[venälaižed]] — 63,4%, [[totarlaižed]] — 10,1%, [[ukrainalaižed]] — 5,0%, [[baškiralaižed]] — 2,3%, [[azerbaidžanlaižed]] — 2,2%, [[kumikad]] — 1,4%, [[čuvašalaižed]] — 1,1%, toižed rahvahad — 7,2%, rahvahuden ozutandata — 7,3%.
+
+Edeline lidnan pämez' om Sergei Degtäröv (reduku 2016 — kül'mku 2021).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Набережная. Нефтеюганск.jpg|Randird i muštnik edelmatkajile (2020)
+Храм всех святых. Нефтеюганск.jpg|Kaikiden Pühämehiden jumalanpert' (ortodoksine hristanuskond), vn 2020 nägu
+Памятные мероприятия в Нефтеюганске.jpg|Ümbrikon ezmäižed mehed i lidnan eläjad V. Petuhovan muštnikanno, fizkul'turan da sportan «Žemčužina Jugri»-keskuz (''Jugran hel'mič'') om tagamal vl 2019
+Развязка на Нефтеюганск - panoramio.jpg|Avtotel Surgutannoks vl 2012, erižtazoristtenno
+Речной порт Нефтеюганска.jpg|Jogiportan libutimed vl 2012
+</gallery>
 
 == Irdkosketused ==
 * [http://admugansk.ru/ Neftejugansk-lidnan tobmuden aluzkundoiden oficialine sait (''admugansk.ru'').] {{ref-ru}}
