--- a/Surgut.mw
+++ b/Surgut.mw
@@ -1,21 +1,21 @@
 {{Eländpunkt
- | Nimi = Surgut<br />Сургут
+ | Nimi = Surgut<br />Сургут <small>(ven.)</small><br />Сәрханӆ / Сө̆ркут <small>(hant.)</small>
  | Lidnanznam = Coat of Arms of Surgut (2003).png
  | Flag = Flag of Surgut (Khanty-Mansia (Yugra)).png
  | Lidnanznam text = Surgutan lidnanznam
  | Flag text = Surgutan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 360,590
- | Voz' = 2017
+ | Eläjiden lugu = 395,900
+ | Voz' = 2022
  | Pind = 353.97
- | Fail = Surgut, Russia 09.jpg
- | Pämez' = Vadim Šuvalov<br />(heinku 2016—)
+ | Fail = Сургут, Заячий остров. - panoramio.jpg
+ | Pämez' = Andrei Filatov<br />(keväz'ku 2021—)
  | Telefonkod = +7-3462-xxx-xxx
  | Avtokod = 86. 186
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-[[Fail:Районы Сургута.png|thumb|left|250px|'''Surgutan viž territoriališt rajonad:'''<br /> <span style="background-color:#E0B0FF">Pohjoine eländrajon.</span><br /> <span style="background-color:#00FF7F">Pohjoine tegimištoline rajon.</span><br /> <span style="background-color:#FFFF00">Pohjoižpäivnouzmaine eländrajon.</span><br /> <span style="background-color:#ADD8E6">Keskuzrajon.</span><br /> <span style="background-color:#FF8C69">Päivnouzmaine rajon.</span>]]
-'''Surgut''' ([[venäkel'|ven]]. i {{lang-uk|Сургут}}, {{lang-tt|Соргыт}}) om [[Venäma]]n lidn da lidnümbrik [[Hantin da Mansin avtonomine ümbrik|Hantin da Mansin avtonomižen ümbrikon]] keskuzpalan päivnouzmas. Se om ümbrikon kaikiš suremb lidn eläjiden lugun mödhe, mugažo om [[Surgutan rajon]]an administrativižeks keskuseks (ei mülü sihe).
+[[Fail:Районы Сургута.png|thumb|left|250px|'''Surgutan viž territoriališt rajonad:'''<br /> <span style="background-color:#E0B0FF">Pohjoine eländrajon</span><br /> <span style="background-color:#00FF7F">Pohjoine tegimištoline rajon</span><br /> <span style="background-color:#FFFF00">Pohjoižpäivnouzmaine eländrajon</span><br /> <span style="background-color:#ADD8E6">Keskuzrajon</span><br /> <span style="background-color:#FF8C69">Päivnouzmaine rajon</span>]]
+'''Surgut''' ([[venäkel'|ven]]. i {{lang-uk|Сургут}}, {{lang-kca|Сәрханӆ / Сө̆ркут}}, {{lang-tt|Соргыт}}) om [[Venäma]]n lidn da lidnümbrik [[Hantin da Mansin avtonomine ümbrik|Hantin da Mansin avtonomižen ümbrikon]] keskuzpalan päivnouzmas. Se om ümbrikon kaikiš suremb lidn eläjiden lugun mödhe, mugažo om [[Surgutan rajon]]an administrativižeks keskuseks (ei mülü sihe).
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1594 kuti ''Surgut-lidnuz'' [[Födor I Čudokaz]]-carin käskön mödhe alištamha Sibirin tahondoid. Vspäi 1782 alištui [[Tobol'sk]]an tobmudele makundan lidnaks. Vl 1923 kadoti lidnan statusad i kändihe žiloks läz 1,5 tuhad ristitištonke. Vspäi 1957 oli geologižen tedištelendan keskuseks. Vodele 1962 avaitihe [[kivivoi]]n järedoid löudmižsijid, i žilo sauvoškanzihe hotkas. Se sai lidnan statusad tošti vn 1965 25. päiväl kezakud avtonomižen ümbrikon alištusenke.
@@ -28,16 +28,34 @@ Lidn sijadase [[Ob'|Ob'-jogen]] oiktal randal, 40 m keskmäižel korktusel valdm
 Surgut om lidnümbrikon üks'jäine eländpunkt. Lidn kogoneb enamba mi 40 nomeruidud mikrorajonaspäi, mugažo 24 žilod mülüdas lidnha.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 306 675 ristitud. Kaikiš suremb ristitišt om nügüd'. Ortodoksižen hristanuskondan 15 pühäpertid, baptizman 3 jumalanpertid, islaman 2 mečetid i katoline tulend ratas lidnan mikrorajoniš da sen žiloiš.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 306 675 ristitud. Kaikiš suremb ristitišt om nügüd'.
 
 Rahvahad (enamba 0,4% vl 2010): [[venälaižed]] — 64,5%, [[ukrainalaižed]] — 6,0%, [[totarlaižed]] — 5,2%, [[baškiralaižed]] — 1,8%, [[azerbaidžanlaižed]] — 1,4%, [[čuvašalaižed]] — 0,9%, [[lezgilaižed]] — 0,8%, [[vaugedvenälaižed]] — 0,8%, [[moldovalaižed]] — 0,7%, [[armenijalaižed]] — 0,7%, [[marilaižed]] — 0,5%, [[saksalaižed]] — 0,4%, [[nogailaižed]] — 0,4%, toižed rahvahad — 4,0%, rahvahuden ozutandata — 11,9%.
 
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] 15 pühäpertid, [[baptizm]]an koume jumalanpertid, [[islam]]an kaks' mečetid i [[katoline jumalankodikund|katoline]] tulend ratas lidnan mikrorajoniš da sen žiloiš.
+
 Surgutan valdkundaline universitet om [[openduz|opendusen]] päaluzkundaks. Kuz' sportkompleksad, 21 ambundsportsijad, 16 basseinad, seičeme suks'bazad om olmas lidnümbrikos.
+
+Edeline lidnan pämez' om Vadim Šuvalov (heinku 2016 — tal'vku 2020).
 
 == Transport ==
 Avtobusad da maršruttaksid oma kundaližeks transportaks lidnas. Jugorskii-trakt om ümbärduzavtoteks. Jogiport jäi GRES:oiden sauvomižen aigaspäi. Päraudtestancii om saudud lidnan lodehes vl 1988.
 
 Rahvahidenkeskeine civiline Surgut-lendimport (''SGC / СУР'') sijadase 10 km pohjoižhe lidnan keskusespäi. Tehtas reisid Keskuzazijan maihe, Keskmeren (Turkanma) i Suvipäivnouzmaižen Azijan (Tailand, Vjetnam) lebutahoiže, mugažo järedoihe lidnoihe Venämadme.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Краеведческий музей Сургута - panoramio.jpg|Lidnan muzeikeskuz (2013)
+Surgut IMG 2898 (8157035829).jpg|Sündun Toižetamižen kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2012 nägu
+Surgut, Khanty-Mansi Autonomous Okrug, Russia - panoramio (8).jpg|Hristos-Päzutajan loičendpert' (baptizm), vn 2011 nägu
+Страховое общество «Сургутнефтегаз».jpg|«Surgutneftegaz»-varmituzkompanijan päfater vl 2012
+Surgut, Russia 09.jpg|«Tümen'energo:n» i «Gazprom:an» sauvused,<br />puišt Saimanjogenno vl 2009
+Surgut, Khanty-Mansi Autonomous Okrug, Russia - panoramio (3).jpg|Surgutan GRES-2 vl 2011
+Surgut IMG 2881 (8157034381).jpg|Surgutan valdkundaline universitet (2012)
+Mikrorayon A, Surgut, Khanty-Mansiyskiy avtonomnyy okrug, Russia - panoramio (1).jpg|«City Centre»-adivpert' (2011)
+Surgut IMG 2854 (8157032799).jpg|Jugran sild (Surgutan avtotesild i raudtesild) Obiš päliči vl 2012
+Surgut railway station.jpg|Surgut-raudtestancii vl 2005
+</gallery>
 
 == Irdkosketused ==
 * [http://dumasurgut.ru/ Lidnan Duman oficialine sait (''dumasurgut.ru'').] {{ref-ru}}
