--- a/Surgut.mw
+++ b/Surgut.mw
@@ -48,6 +48,7 @@ Rahvahidenkeskeine civiline Surgut-lendimport (''SGC / СУР'') sijadase 10 km 
 Краеведческий музей Сургута - panoramio.jpg|Lidnan muzeikeskuz (2013)
 Surgut IMG 2898 (8157035829).jpg|Sündun Toižetamižen kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2012 nägu
 Surgut, Khanty-Mansi Autonomous Okrug, Russia - panoramio (8).jpg|Hristos-Päzutajan loičendpert' (baptizm), vn 2011 nägu
+Surgut, Khanty-Mansi Autonomous Okrug, Russia - panoramio (16).jpg|Surgutan pämečet', vn 2011 nägu
 Страховое общество «Сургутнефтегаз».jpg|«Surgutneftegaz»-varmituzkompanijan päfater vl 2012
 Surgut, Russia 09.jpg|«Tümen'energo:n» i «Gazprom:an» sauvused,<br />puišt Saimanjogenno vl 2009
 Surgut, Khanty-Mansi Autonomous Okrug, Russia - panoramio (3).jpg|Surgutan GRES-2 vl 2011
