--- a/LVS-2005.mw
+++ b/LVS-2005.mw
@@ -1,9 +1,19 @@
-[[Fail:TramMoskovskiyeVorotaSquare2008-04-12-1103c cut.jpg|thumb|right|250px|LVS-2005 läz [[Moskvan Triumfaližed verajad|Moskvan Triumfaližid verajid]] [[Piter]]iš vl 2008.]]
-'''LVS-2005 (71-152)''' ({{lang-ru|ЛВС-2005 (71-152)}}) om [[Venäma]]n [[tramvai]]vagon. Sädihe sidä [[Piterin tramvaiž-mehanine tegim|Piterin tramvaiž-mehanižel tegimel]] vl 2005. Kodvindkävutand zavodihe vl 2007.
+[[Fail:TramMoskovskiyeVorotaSquare2008-04-12-1103c cut.jpg|thumb|right|250px|LVS-2005 läz [[Moskvan Triumfaližed verajad|Moskvan Triumfaližid verajid]] [[Piter]]iš vl 2008]]
+'''LVS-2005 (71-152)''' ({{lang-ru|ЛВС-2005 (71-152)}}) om [[Venäma]]n [[tramvai]]vagon. Sädihe sidä [[Piterin tramvaiž-mehanine tegim|Piterin tramvaiž-mehanižel tegimel]] vl 2005. [[LM-2008]]- i [[LVS-2009]]-modelid oma sätud sen alusel.
+
+Kodvindkävutand zavodihe vl 2007. Kaik om pästtud 26 tramvaid municipaližen kontraktan mödhe vll 2006−2009, ekspluatiruidas Piteriš päiči üht Barnaulas.
 
 Tramvaivagon ajab ühthe čuradushe. Se om kuz'värtmusine, om ühtenzoittud kahtes palaspäi, lavan vajehtujanke tazopindanke.
 
 Nell' uks'reigud, 26 tonnad vedutte. Kaikiš lujemb piguz om 75 km/čas. Kävutandan strok om 20 vot.
+
+== Toižed harakteristikad ==
+* Likutim: Pragoimex TAM 1004 C, 90 kVt vägevudenke
+* Verkon kingitez 550 V, südäiverkon 24 V
+* Irdmärad: 22 500 mm pitte, 2550 mm levette, 3530 mm korkte, kezroiden baz 7500 + 7500 mm, raižu 1524 mm
+* Madalan lavan pala: koume videndest
+* Ištmiden verd: 38 [2+1] (52 [2+2])
+* Passažiroiden mülündmär: nominaline 170 (5 rist./m²), täuz' 250 (8 rist./m²)
 
 == Homaičendad ==
 <references />
