*Empty MediaWiki Message*

--- a/LVS-2005.mw
+++ b/LVS-2005.mw
@@ -8,12 +8,12 @@ Tramvaivagon ajab ühthe čuradushe. Se om kuz'värtmusine, om ühtenzoittud kah
 Nell' uks'reigud, 26 tonnad vedutte. Kaikiš lujemb piguz om 75 km/čas. Kävutandan strok om 20 vot.
 
 == Toižed harakteristikad ==
-* Likutim: Pragoimex TAM 1004 C, 90 kVt vägevudenke
-* Verkon kingitez 550 V, südäiverkon 24 V
-* Irdmärad: 22 500 mm pitte, 2550 mm levette, 3530 mm korkte, kezroiden baz 7500 + 7500 mm, raižu 1524 mm
-* Madalan lavan pala: koume videndest
-* Ištmiden verd: 38 [2+1] (52 [2+2])
-* Passažiroiden mülündmär: nominaline 170 (5 rist./m²), täuz' 250 (8 rist./m²)
+* likutim: Pragoimex TAM 1004 C, 90 kVt vägevudenke
+* irdpol'žen elektroverkon kingitez 550 V, südäiverkon 24 V
+* irdmärad: 22 500 mm pitte, 2550 mm levette, 3530 mm korkte, kezroiden baz 7500 + 7500 mm, raižu 1524 mm
+* madalan lavan pala: koume videndest
+* ištmiden verd: 38 [2+1] (52 [2+2])
+* passažiroiden mülündmär: nominaline 170 (5 rist./m²), täuz' 250 (8 rist./m²)
 
 == Homaičendad ==
 <references />
