--- a/Rogun.mw
+++ b/Rogun.mw
@@ -13,15 +13,20 @@
  | Telefonkod = +992-3134
  | Aigvö = [[UTC]]+5
 }}
-'''Rogun''' ({{lang-tg|Роғун}}, {{lang-fa|راغون‎}}, {{lang-ru|Рогун}}) om lidn tazovaldkundan alištusenke [[Tadžikistan]]an keskuzpalan päivlaskmas. Se om [[Rogunan rajon]]an tazovaldkundan alištusenke administrativižeks keskuseks, ei mülü sihe.
+'''Rogun''' ({{lang-tg|Роғун}}, {{lang-fa|راغون‎}}, {{lang-ru|Рогун}}) om lidn tazovaldkundan alištusenke [[Tadžikistan]]an keskuzpalan päivlaskmas. Se oli [[Rogunan rajon]]an tazovaldkundan alištusenke administrativižeks keskuseks, ühtištuihe lidnanke vl 2018.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1961 kuti Rogunan GES:an sauvojiden lidn. Gidroelektrostancijan ezmäine agregat radaškanzi vn 2018 lopus, kahtenz' — vn 2019 kezakus. Kaik kuz' agregatad om planiruidud vodele 2029.
+Eländpunktan aluz om pandud vl 1961 kuti Rogunan GES:an sauvojiden lidn.
+
+Gidroelektrostancijan ezmäine agregat radaškanzi vn 2018 lopus, kahtenz' — vn 2019 kezakus. Kaik kuz' agregatad om planiruidud vodele 2029.
 
 == Geografijan andmused ==
 Lidn sijadase Vahš-jogen alangištos ([[Pändž]]an oigedpol'ne bassein), 1230 m ü.m.t. keskmäižel korktusel. Matkad [[Dušanbe]]-pälidnhasai om 115 km päivlaskmha.
 
-Vl 2007 lidnan eläjiden lugu oli 9 600 ristitud. Kaikiš suremb ristitišt om nügüd'.
+Klimat om kontinentaline läm'. Voden keskmäine lämuz om +8,2 C°, tal'veližil kuil alemba noläd (viluku −5,5 C°). Paneb sadegid 877 mm vodes, kevädel i tal'vel päpaloin, keza om kuiv.
+
+== Eläjad ==
+Vl 2007 lidnan eläjiden lugu oli 9 600 ristitud. Kaikiš suremb ristitišt om nügüd'. Kodirandantedištandmuzei om avaitud lidnas vl 1991.
 
 == Homaičendad ==
 <references />
@@ -30,4 +35,3 @@ Vl 2007 lidnan eläjiden lugu oli 9 600 ristitud. Kaikiš suremb ristitišt om n
 [[Kategorii:Tadžikistanan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:Tadžikistanan lidnad tazovaldkundan alištusenke]]
-[[Kategorii:Rogunan rajon|*]]
