--- a/Iisus_Hristos.mw
+++ b/Iisus_Hristos.mw
@@ -1,7 +1,10 @@
 {{1000}}{{A10000}}
-{{Personalii}}
+{{Personalii
+|изображение = 
+|описание изображения = ''Hristos Pantokrator'' om Hänen kaikiš amuižembiš jumalaižišpäi, 6. voz'sada, ph. Jekaterinan jumalankodi Sinai-mägel, Egipt
+}}
 [[Fail:00058 christ pantocrator mosaic hagia sophia 656x800.jpg|thumb|left|250px|Iisus Hristos, 12. voz'sadan mozaikan fragment, Stambul]]
-'''Iisus Hristos''' ({{lang-grc|Ἰησοῦς Χριστός}}, {{lang-la|Iesus Christus}}, {{lang-he|ישו הנוצרי}}, {{lang-ar|يسوع}}, [[aramejan kel'|aram]].: ''ܝܫܘܥ ܢܨܪܝܐ''; sünd. 1. voz' EME, [[Rimalaine imperii]] — kol. 33. voz' meiden erad, [[Jerusalim]], Rimalaine imperii) om [[hristanuskond]]an keskuzfigur da Sünd, hristianine [[Jumal]]. [[Islam]]as Hän om ühteks päendustajišpäi.
+'''Iisus Hristos''' ({{lang-grc|Ἰησοῦς Χριστός}}, {{lang-la|Iesus Christus}}, {{lang-he|ישו הנוצרי}}, {{lang-ar|يسوع}}, [[aramejan kel'|aram]].: ''ܝܫܘܥ ܢܨܪܝܐ''; sünd. 1. voz' EME, [[Viflejem]], [[Rimalaine imperii]] — kol. 33. voz' meiden erad, [[Jerusalim]], Rimalaine imperii, om mahapandud siš-žo) om [[hristanuskond]]an keskuzfigur da Sünd, hristianine [[Jumal]]. [[Islam]]as Hän om ühteks päendustajišpäi [[Isa ibn Marjam|Isa]]-nimenke.
 
 Hristos om endustadud [[Vanh Zavet|Vanhas Zavetas]] Messii, kändihe andaks ristituiden grähkiš. Tedoiden päižed purtked Hristan elos da openduses oma [[Evangelii]] i [[Uz' Zavet|Uden Zavetan]] toižed kirjad. Todištused Hänes oma kaičenus toižiden, hristanuskondan irdpolel, kirjutajiden sädusiš, kudambad eliba 1.-2. voz'sadoil.
 
@@ -17,3 +20,4 @@ Mehen tat om [[Jumal-tat]], [[Pühä Iosif]] oti poigaks, mam om [[Jumalanmam|Ma
 [[Kategorii:Iisus Hristos| ]]
 [[Kategorii:Hristanuskond]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
+[[Kategorii:Religijoiden alusenpanijad]]
