--- a/Iisus_Hristos.mw
+++ b/Iisus_Hristos.mw
@@ -1,7 +1,7 @@
 {{1000}}{{A10000}}
 {{Personalii
-|изображение = 
-|описание изображения = ''Hristos Pantokrator'' om Hänen kaikiš amuižembiš jumalaižišpäi, 6. voz'sada, ph. Jekaterinan jumalankodi Sinai-mägel, Egipt
+|изображение = Spas vsederzhitel sinay.jpg
+|описание изображения = ''Hristos Pantokrator'' vai ''Spas-valdoičii'' om Hänen kaikiš amuižembiš jumalaižišpäi, 6. voz'sada, ph. Jekaterinan jumalankodi Sinai-mägel, Egipt
 }}
 [[Fail:00058 christ pantocrator mosaic hagia sophia 656x800.jpg|thumb|left|250px|Iisus Hristos, 12. voz'sadan mozaikan fragment, Stambul]]
 '''Iisus Hristos''' ({{lang-grc|Ἰησοῦς Χριστός}}, {{lang-la|Iesus Christus}}, {{lang-he|ישו הנוצרי}}, {{lang-ar|يسوع}}, [[aramejan kel'|aram]].: ''ܝܫܘܥ ܢܨܪܝܐ''; sünd. 1. voz' EME, [[Viflejem]], [[Rimalaine imperii]] — kol. 33. voz' meiden erad, [[Jerusalim]], Rimalaine imperii, om mahapandud siš-žo) om [[hristanuskond]]an keskuzfigur da Sünd, hristianine [[Jumal]]. [[Islam]]as Hän om ühteks päendustajišpäi [[Isa ibn Marjam|Isa]]-nimenke.
